<resources>
    <string name="app_name">UTS2020_MOBILE-BL_00000020150_AndreasSteven_Jukebox</string>
    <string name="AppTitle">JUKEBOX APP</string>
    <string name="BtnAbout">About</string>
    <string name="AM">About Me</string>
    <string name="SongTitle">Heal The World</string>
    <string name="SongArtist">Michael Jacson</string>
    <string name="RotatingImage">Rotating Image</string>
    <string name="SongLyricDefault">Song Lyric</string>
    <string name="ETL">0:11</string>
    <string name="RTL">-1:11</string>
    <string name="N">Name   : Andreas Steven</string>
    <string name="NM">NIM   : 00000020150</string>
    <string name="KL">Kelas   : BL</string>
    <string name="LB">Library   : -</string>
    <string name="BK">Back</string>
    <string name="lirik">
        Michael jackson - Heal the World\n\n

        There`s a place in your heart\n
        And I know that it is love\n
        And this place could be much\n
        Brighter than tomorrow\n
        And if you really try\n
        You`ll find there`s no need to cry\n
        In this place you`ll feel\n
        There`s no hurt or sorrow\n\n\n\n\n

        There are ways to get there\n
        If you care enough for the living\n
        Make a little space\n
        Make a better place\n\n\n\n\n\n\n

        Heal the world\n
        Make it a better place\n
        For you and for me\n
        And the entire human race\n
        There are people dying\n
        If you care enough for the living\n
        Make it a better place\n
        For you and for me\n\n\n\n\n\n\n

        If you want to know why\n
        There`s love that cannot lie\n
        Love is strong\n
        It only cares of joyful giving\n
        If we try we shall see\n
        In this bliss we cannot feel\n
        Fear of dread\n
        We stop existing and start living\n\n\n\n

        The it feels that always\n
        Love`s enough for us growing\n
        Make a better world\n
        Make a better world\n\n\n

        Heal the world\n
        Make it a better place\n
        For you and for me\n
        And the entire human race\n
        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n\n\n\n\n

        And the dream we were conceived in\n
        Will reveal a joyful face\n
        And the world we once believed in\n
        Will shine again in grace\n
        Then why do we keep strangling life\n
        Wound this earth, crucify its soul\n
        Though it`s plain to see\n
        This world is heavenly\n
        Be god`s glow\n\n\n\n\n\n

        We could fly so high\n
        Let our spirits never die\n
        In my heart I feel you are all my brothers\n
        Create a world with no fear\n
        Together we cry happy tears\n
        See the nations turn their swords into plowshares\n\n\n\n\n\n

        We could really get there\n
        If you cared enough for the living\n
        Make a little space\n
        To make a better place\n\n\n

        Heal the world\n
        Make it a better place\n
        For you and for me\n
        And the entire human race\n
        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n\n

        Heal the world\n
        Make it a better place\n
        For you and for me\n
        And the entire human race\n
        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n\n\n

        Heal the world\n
        Make it a better place\n
        For you and for me\n
        And the entire human race\n
        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n\n\n

        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n\n\n

        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n\n\n

        There are people dying\n
        If you care enough for the living\n
        Make a better place for you and for me\n
        You and for me\n
    </string>
</resources>
