<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="63dp">

        <TextView
            android:id="@+id/AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />

        <Button
            android:id="@+id/AboutButton"
            android:layout_width="70dp"
            android:layout_height="39dp"
            android:text="@string/BtnAbout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.724"
            app:layout_constraintStart_toEndOf="@+id/AppName"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/SongTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/SongTitle"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/SongArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/SongArtist"
        android:textAlignment="center"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/RotatingImage"
        android:layout_width="295dp"
        android:layout_height="167dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/RotatingImage"
        app:srcCompat="@drawable/records" />

    <TextView
        android:id="@+id/SongLyric"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_marginTop="10dp"
        android:text="@string/SongLyricDefault"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/PlayPosition"
        android:layout_width="344dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <TextView
            android:id="@+id/ElapsedTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:text="@string/ETL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/RemainingTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RTL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toEndOf="@+id/ElapsedTimeLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/BtnPlay"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="47dp"
            android:layout_height="46dp"
            android:layout_marginStart="124dp"
            android:background="@drawable/ic_play_arrow_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <Button
            android:id="@+id/BtnPause"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="47dp"
            android:layout_height="46dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_pause_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/BtnPlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>